# ML-Deployment

./: .coverage  Dockerfile  Makefile  README.md  docker-compose.yml  dockerignore  env.example  generate_data.py  mlflow.db  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
api/: main.py  schemas.py
api/routes/: predict.py
data/raw/: WA_Fn-UseC_-HR-Employee-Attrition.csv
ml_deployment.egg-info/: PKG-INFO  SOURCES.txt
mlruns/1/models/m-00e8d25f71ef4a4b87c1c0247915c598/artifacts/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
models/: model.joblib
src/: config.py  preprocess.py  train.py
tests/: conftest.py  test_api.py  test_model.py  test_preprocess.py
